fixed up styles to be more versatile. still not responding well to font-size changes. need to get rid of those last images...
added basic modal and adjusted styles. not visible, will be tied to
all onscreen actions, displaying all non-originaltable-data in a modal.

like
create new location in the locations widget
show user info
kick or ban a user opens a modal with options
delete action will open a modal

and so forth

--- a/bot/modules/webserver/static/lcars/style.css
+++ b/bot/modules/webserver/static/lcars/style.css
@@ -1,6 +1,7 @@
 /* region main_settings -> start */
 /* variables */
 :root {
+    font-size: 16px;
     /* colors have to be issued in HEX, so we can use them without trouble inside out JavaScript portion */
     --background: #000000;
 
@@ -15,11 +16,11 @@
     --lcars-light-blue: #9999FF;
 
     /* pixel values taken from the used images */
-    --main_shoulder_width: 270px;
-    --main_shoulder_height: 72px;
-    --main_bar_height: 42px;
-    --main_bar_terminator_width: 40px;
-    --main_table_gutter: 4px;
+    --main_shoulder_width: 16.875em;
+    --main_shoulder_height: 4.5em;
+    --main_bar_height: 2.625em;
+    --main_bar_terminator_width: 2.5em;
+    --main_table_gutter: 0.25em;
 }
 
 @font-face {
@@ -43,7 +44,7 @@
 
 ::-webkit-scrollbar-thumb {
     background: var(--lcars-yellow);
-    border-radius: 20px;
+    border-radius: 1.25em;
 }
 ::-webkit-scrollbar-thumb:hover {
     background: var(--lcars-orange);
@@ -188,6 +189,28 @@ body > main > div > .widget {
     margin-bottom: 0.5em;
     scroll-snap-align: start;
 }
+body > main > div > .widget > main {
+    position: relative;
+}
+
+body > main > div > .widget > main .dialog {
+    position: absolute;
+    top: 0.5em; left: 0;
+    background-color: var(--lcars-yellow);
+    opacity: 0.95;
+    z-index: 1000;
+    display: none;
+    height: calc(100vh - var(--main_shoulder_height) - var(--main_shoulder_height) - var(--main_bar_height) - 2em);
+    width: calc(100vw - var(--main_shoulder_width) - (var(--main_bar_terminator_width) * 2) - 0.5em);
+    padding-right: 0.5em;
+    border-top-right-radius: 1.25em;
+    border-bottom-right-radius: 1.25em;
+    overflow: hidden;
+}
+
+body > main > div > .widget > main .dialog .modal-content {
+    padding: 1em;
+}
 
 .widget > main > table {
     margin-top: 0.5em;
@@ -208,8 +231,8 @@ body > main > div > .widget {
         var(--background) 0%,
         var(--background) var(--main_table_gutter),
         var(--lcars-yellow) var(--main_table_gutter),
-        var(--lcars-yellow) calc(42.52px + var(--main_table_gutter)),
-        var(--background) calc(42.52px + var(--main_table_gutter)),
+        var(--lcars-yellow) calc(var(--main_bar_terminator_width) + (var(--main_table_gutter) /2)),
+        var(--background) calc(var(--main_bar_terminator_width) + (var(--main_table_gutter) / 2)),
         var(--background) 100%
     );
 }
@@ -484,31 +507,30 @@ footer > div > p {
 
 .widget > header {
     display: block;
-    height: 48px;
+    height: 3em;
     width: 100%;
     clear: both;
     background-color: var(--lcars-purple);
-    border-top-left-radius: 24px;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
+    border-top-left-radius: 1.5em;
+    border-top-right-radius: 1.5em;
+    border-bottom-right-radius: 1.5em;
 }
 
 .widget > header > div > span {
-    font-size: 48px; line-height: 1em;
+    font-size: 3em; line-height: 1em;
     color: var(--background);
-    margin-left: 24px;
+    margin-left: 1.5em;
 }
 
 .widget > aside {
     float: left;
     width: var(--main_shoulder_width);
     background: url(ui/main_vertical_bar.png) repeat-y;
-    height: calc(100% - 48px);
+    height: calc(100% - 3em);
 }
 
 .widget > main {
     width: calc(100vw - var(--main_shoulder_width) - var(--main_bar_terminator_width) - 2.5em);
-    min-height: calc(176px + 1.5em);
     overflow-y: auto;
 }
 
@@ -527,7 +549,7 @@ footer > div > p {
 .widget > aside > div > div > span {
     display: block;
     background-color: var(--lcars-purple);
-    padding: 0; margin-right: 26px;
+    padding: 0; margin-right: 1.625em;
     line-height: 4.5em;
 }
 
@@ -543,10 +565,18 @@ footer > div > p {
 }
 
 .widget > main > table > tbody > tr > td {
-    font-size: 1.125em;
-    line-height: 24px;
+    font-size: 1em;
+    line-height: 1.5em;
     white-space: nowrap;
-    padding: 0 var(--main_table_gutter);
+    padding: 0 calc(var(--main_table_gutter) / 2);
+}
+
+.widget > main > table > tbody > tr > td:first-child {
+    padding-left: var(--main_table_gutter);
+}
+
+.widget > main > table > tbody > tr > td:last-child {
+    padding-right: var(--main_table_gutter);
 }
 
 .widget > main > table > tbody > tr > td[id$='_name'] {
@@ -555,13 +585,12 @@ footer > div > p {
 
 .widget > main > table > tbody > tr > td[id$='_actions'] {
     display: flex;
-    margin-right: -5px;
+    margin: 0 calc(0 - (var(--main_table_gutter)));
 }
 
 .widget > main > table > tbody > tr > td[id$='_actions'] > span {
-    flex: 0 0 auto;
-    margin-right: 5px;
-
+    flex: 1 1 auto;
+    margin: 0 calc(var(--main_table_gutter) / 2);
 }
 
 .widget > main > table > tfoot > tr {
@@ -577,7 +606,7 @@ footer > div > p {
     background-color: var(--lcars-yellow);
     margin: 0 0 0 var(--main_table_gutter) ;
     padding-left: 5.25em;
-    height: 20px; line-height: 20px;
+    height: 1.25em; line-height: 1.25em;
     border-top-right-radius: 1em;
     border-bottom-right-radius: 1em;
     border-bottom-left-radius: 3em 2em;
@@ -608,7 +637,7 @@ footer > div > p {
 
 .widget main .delete_button {
     display: inline-block;
-    height: 20px; line-height: 20px;
+    height: 1.25em; line-height: 1.25em;
     border-left: 0.25em solid var(--background);
     border-right: 0.25em solid var(--background);
 }
